--- a/assets/css/exercice.css
+++ b/assets/css/exercice.css
@@ -127,12 +127,20 @@ h2 {
   padding: 10px 15px;
   color: var(--text-white-opacity);
   font-weight: 600;
+  transition: border cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
+}
+.navbar ul li:hover {
+  border-bottom: 2px solid #fff;
 }
 
 .display-flex {
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+.banner-container {
+  background: radial-gradient(ellipse at top, var(--primary-color), #fff);
 }
 
 .home-banner {
@@ -149,9 +157,11 @@ main section {
   padding: 25px 0;
 }
 
-.services-container {
-  display: flex;
-  justify-content: space-between;
+@media screen and (min-width: 769px) {
+  .services-container {
+    display: flex;
+    justify-content: space-between;
+  }
 }
 
 .services-section-header {
@@ -168,8 +178,34 @@ main section {
   margin-top: 0;
 }
 
-article.service-item:not(:last-child) {
-  margin-right: 40px;
+article.service-item {
+  margin-bottom: 20px;
+  box-shadow: 0px 3px 10px var(--primary-color);
+}
+article.service-item:last-child .service-header {
+  position: relative;
+}
+article.service-item:last-child .service-header:before {
+  content: "";
+  width: 50px;
+  height: 50px;
+  border: 2px solid #fff;
+  border-right: transparent;
+  border-bottom: transparent;
+  border-radius: 25px;
+  position: absolute;
+  z-index: 1;
+  bottom: 0px;
+  right: 0;
+  transform: translate(0px, 20px) rotate(45deg);
+}
+@media screen and (min-width: 769px) {
+  article.service-item {
+    margin-bottom: 0;
+  }
+  article.service-item:not(:last-child) {
+    margin-right: 40px;
+  }
 }
 article.service-item .service-header {
   background-color: #000;
@@ -193,6 +229,11 @@ article.service-item .service-description {
   padding: 15px 0;
 }
 
+.statement-section {
+  background-image: url("../../assets/images/bg-image.jpg");
+  background-position: center center;
+  background-size: cover;
+}
 .statement-section .statement-section-block {
   display: flex;
   justify-content: flex-end;
@@ -221,6 +262,28 @@ footer {
 
 .open-time h2 {
   margin-top: 0;
+}
+
+.bounce {
+  position: absolute;
+}
+.bounce:hover {
+  animation: 0.8s ease-in-out 0s infinite;
+}
+
+@keyframes bounce {
+  0%, 100% {
+    transform: translateY(0);
+  }
+  30% {
+    transform: translateY(-30px);
+  }
+  60% {
+    transform: translateY(10px);
+  }
+  80% {
+    transform: translateY(-10px);
+  }
 }
 
 /*# sourceMappingURL=exercice.css.map */
