--- a/src/main.scss
+++ b/src/main.scss
@@ -78,6 +78,10 @@ h2 {
       padding: 10px 15px;
       color: var(--text-white-opacity);
       font-weight: 600;
+      transition: border cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
+      &:hover {
+        border-bottom: 2px solid #fff;
+      }
     }
   }
 }
@@ -85,6 +89,10 @@ h2 {
   display: flex;
   align-items: center;
   justify-content: space-between
+}
+.banner-container {
+  // background: linear-gradient(to right, var(--primary-color), #fff);
+  background: radial-gradient(ellipse at top, var(--primary-color), #fff)
 }
 .home-banner {
   width: 90%;
@@ -99,8 +107,10 @@ main {
   }
 }
 .services-container {
-  display: flex;
-  justify-content: space-between;
+  @media screen and (min-width: 769px) {
+    display: flex;
+    justify-content: space-between;
+  }
 }
 .services-section-header {
   display: flex;
@@ -117,8 +127,33 @@ main {
 }
 article {
   &.service-item {
-    &:not(:last-child) {
-      margin-right: 40px;
+    margin-bottom: 20px;
+    box-shadow: 0px 3px 10px var(--primary-color);
+    &:last-child {
+      .service-header {
+        position: relative;
+        &:before {
+          content: '';
+          width: 50px;
+          height: 50px;
+          border: 2px solid #fff;
+          border-right: transparent;
+          border-bottom: transparent;
+          border-radius: 25px;
+          position: absolute;
+          z-index: 1;
+          bottom: 0px;
+          right: 0;
+          transform: translate(0px, 20px) rotate(45deg);
+        }
+      }
+      
+    }
+    @media screen and (min-width: 769px) {
+      &:not(:last-child) {
+        margin-right: 40px;
+      }
+      margin-bottom: 0;
     }
     .service-header {
       background-color: #000;
@@ -144,6 +179,9 @@ article {
   }
 }
 .statement-section {
+  background-image: url('../../assets/images/bg-image.jpg');
+  background-position: center center;
+  background-size: cover;
   .statement-section-block {
     display: flex;
     justify-content: flex-end;
@@ -171,4 +209,18 @@ footer {
   h2 {
     margin-top: 0;
   }
+}
+
+.bounce {
+  position: absolute;
+  &:hover {
+    animation: 0.8s ease-in-out 0s infinite;
+  }
+}
+
+@keyframes bounce {
+  0%, 100% { transform: translateY(0);}
+  30% {transform: translateY(-30px);}
+  60% {transform: translateY(10px);}
+  80% {transform: translateY(-10px);}
 }
